src/test/deca/syntax/invalid/testMainInsideClass.deca
// use the Main inside a class
class A{
    int x;
    {
        A a = new A(); 
    }
}
